@startuml tutor_platform_core_erd

!define PF_KEY(x) **PK & FK** x
!define P_KEY(x) **PK** x
!define F_KEY(x) **FK** x
!theme carbon-gray

skinparam arrow {
	Thickness 1
	Color #262626
	FontColor #262626
}

title Система репетиторів - Основна ER Діаграма

left to right direction

entity "User" as user {
  P_KEY(user_id)
  --
  first_name
  last_name
  email
  phone
  role
  registration_date
}

entity "Student" as student {
  PF_KEY(student_id) → User(user_id)
  --
  school_grade
  city
}

entity "Tutor" as tutor {
  PF_KEY(tutor_id) → User(user_id)
  --
  education
  experience_years
  city
  rating
}

entity "Schedule" as schedule {
  P_KEY(schedule_id)
  --
  F_KEY(tutor_id)
  day_of_week
  start_time
  end_time
  is_available
}

entity "Subject" as subject {
  P_KEY(subject_id)
  --
  name
  category
}

entity "Tutor_Subject" as tutor_subject {
  P_KEY(tutor_subject_id)
  --
  F_KEY(tutor_id)
  F_KEY(subject_id)
  price
  format_online
  format_offline
}

entity "Lesson" as lesson {
  P_KEY(lesson_id)
  --
  F_KEY(student_id)
  F_KEY(tutor_subject_id)
  F_KEY(schedule_id)
  lesson_date
  start_time
  duration_minutes
  status
}

entity "Review" as review {
  P_KEY(review_id)
  --
  F_KEY(lesson_id)
  rating
  comment
  is_anonymous
  created_date
}

user ||--|| student : "1:1"
user ||--|| tutor : "1:1"

tutor ||--|{ tutor_subject : "1:N"
subject ||--|{ tutor_subject : "1:N"

student ||--o{ lesson : "1:N"
tutor_subject ||--o{ lesson : "1:N"

lesson ||--o| review : "1:1"
tutor ||--o{ schedule : "1:N"
schedule ||--o{ lesson : "1:N"

@enduml